Better fix for #1406 that won't make title text too small when only title text is shown (no additional text etc.)

--- a/modules/xerte/parent_templates/Nottingham/models_html5/title.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/title.css
@@ -5,6 +5,10 @@
 	}
 
 	.x_responsive .titlePageTxt p {
+		font-size: 7vmin;
+	}
+
+	.x_responsive #txtHolder.smallerTitle .titlePageTxt p {
 		font-size: min(3em, 7vmin);
 	}
 
